# test_playground

./: README.md  electron.cjs  index.html  package-lock.json  package.json  preload.cjs  vite.config.ts  vite.config.ts.timestamp-1762266336722-8a308867349608.mjs  vite.config.ts.timestamp-1762805854705-623725622332f.mjs  vite.config.ts.timestamp-1773906244222-e7a7885b6abf8.mjs
data/: clients.json  config.json  game.csv  games.json  launched_games (1).json
electron/: database.js  main.js  preload.js
src/: App.tsx  mystery.css  survival.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AdminConfigPage.tsx  AdminPasswordModal.tsx  Alert.tsx  ApiDocsPage.tsx  ApiLogsPage.tsx  AuthForm.tsx  CardDetectionAlert.tsx  CardsManagement.tsx  ClientCardsPage.tsx  ConfigurationPage.tsx  ConfirmDialog.tsx  EmailInputModal.tsx  EmailSetupModal.tsx  FileContentModal.tsx  FolderBrowser.tsx  Footer.tsx  GameList.tsx  GamePage.tsx  GameTestModal.tsx  LaunchGameModal.tsx  LaunchedGameConfigModal.tsx  LaunchedGamesList.tsx  LayoutManagement.tsx  LeaderboardPage.tsx  LeaderboardPanel.tsx  MultiGameLeaderboard.tsx  MysteryGamePage.tsx  OnboardingModal.tsx  PatternsManagement.tsx  PatternsPage.tsx  PunchAnimationOverlay.tsx  RankingsModal.tsx  ScenarioDownloadModal.tsx  ScenariosManagement.tsx  SurvivalGamePage.tsx  SyncLoadingModal.tsx  TagQuestGamePage.tsx  TeamDetailsModal.tsx  TeamTestModal.tsx  TimeRangeLeaderboard.tsx
src/contexts/: AuthContext.tsx
src/data/: apiEndpoints.ts
src/hooks/: useGameStatePolling.ts
src/lib/: db.ts  (+8 more)
(+84 files in other folders)
